--- a/templates/people.html
+++ b/templates/people.html
@@ -1,3 +1,7 @@
+{% extends "base.html" %}
+{% block title %}people{% endblock %}
+
+{% block content %}
 <h1>people:</h1>
 
 <ul>
@@ -5,3 +9,4 @@
     <li>{{ n }}</li>
   {% endfor %}
 </ul>
+{% endblock %}
