json and html5 form field validation

--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,8 @@
     <a href="{{ url_for("home") }}">home</a>
     |
     <a href="{{ url_for("people") }}">people</a>
+    |
+    <a href="{{ url_for("api_foo") }}">api (foo)</a>
   </div>
   <div id="content" style="">{% block content %}{% endblock %}</div>
 
