--- a/templates/base.html
+++ b/templates/base.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-nn4HPE8lTHyVtfCBi5yW9d20FjT8BJwUXyWZT9InLYax14RDjBj46LmSztkmNP9w" crossorigin="anonymous">
+  <!-- <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-nn4HPE8lTHyVtfCBi5yW9d20FjT8BJwUXyWZT9InLYax14RDjBj46LmSztkmNP9w" crossorigin="anonymous"> -->
   <link rel="stylesheet" href="/static/style.css" />
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
 
   <title>{% block title %}{% endblock %} | 5117 09-26</title>
 </head>
-<body style="">
+<body>
+
   <div id="menu">
     <a href="{{ url_for("home") }}">home</a>
     |
@@ -16,6 +17,7 @@
     |
     <a href="{{ url_for("api_foo") }}">api (foo)</a>
   </div>
+
   <div id="content" style="">{% block content %}{% endblock %}</div>
 
 </body>
