--- a/templates/people.html
+++ b/templates/people.html
@@ -6,7 +6,7 @@
 
 <ul>
   {% for n in names %}
-    <li>{{ n }}</li>
+    <li><a href="/people/{{n}}">{{ n }}</a></li>
   {% endfor %}
 </ul>
 {% endblock %}
