--- a/templates/home.html
+++ b/templates/home.html
@@ -8,7 +8,7 @@
 {% block content %}
 
 <!-- <form class="pure-form pure-form-stacked"> -->
-<form method="post" action="/people">
+<form class="pure-form pure-form-stacked" method="post" action="/people">
     <fieldset>
         <legend>A form to add a person to the database.</legend>
 
